feat: add log analyzer and more
See `CHANGELOG.md` for full list
